--- a/environment.yml
+++ b/environment.yml
@@ -23,5 +23,5 @@ dependencies:
  # - r-kernsmooth #use this?
   - csvtk=0.25.0
   - unzip=6.0
-  - htslib=1.15.1
   - P7Zip=15.09
+  - bcftools=1.20
